# teste-dev-agents-ai

./: .env.example  .gitignore  GITHUB_ACTIONS_SETUP.md  README.md  README_TEMPLATE.md  api.py  main.py  pyproject.toml  requirements.txt  run_analysis.py
.github/workflows/: auto_docs.yml
agents/: __init__.py  agents.py
tasks/: __init__.py  tasks.py
tools/: __init__.py  tools.py
